header color optimizations

--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -2,5 +2,7 @@
 
 @brand-primary: #b8005c;
 @brand-success: #b8005c;
+@header-bg-color: #2f0013;
+@nav-active-color: #6a0031;
 @gray-lighter: lighten(#000, 93.5%);
 @font: Roboto, sans-serif;
