--- a/public/less/main.less
+++ b/public/less/main.less
@@ -72,6 +72,18 @@ hr.star-primary:after {
 	margin: 0 auto;
 }
 
+.navbar-default {
+  background-color: @header-bg-color !important;
+}
+
+.navbar-default .navbar-nav{
+  .active {
+    a, a:focus, a:hover {
+      background-color: @brand-primary;
+    }
+  }
+}
+
 header {
 	text-align: center;
 	background: @brand-success;
@@ -136,7 +148,7 @@ header {
 		}
     }
     .navbar-fixed-top.navbar-shrink {
-        padding: 5px 0;
+        padding: 0;
 		ul li {
 			font-size: 14px;
 		}
