--- a/public/less/main.less
+++ b/public/less/main.less
@@ -465,6 +465,7 @@ footer {
 	overflow: hidden;
 	max-width: 100%;
 	width: 100%;
+    margin-bottom: 15px;
 }
 
 .embed-container iframe, .embed-container object, .embed-container embed {
