--- a/public/less/main.less
+++ b/public/less/main.less
@@ -7,12 +7,12 @@ body {
 }
 
 p, ul li {
-  font-size: 17px;
+  font-size: 15px;
   font-weigth: 300;
 }
 
 p.small {
-  font-size: 16px;
+  font-size: 13px;
 }
 
 strong {
@@ -111,10 +111,10 @@ header {
       font-family: @font;
       text-transform: uppercase;
       font-weight: 400;
-      font-size: 3em !important;
+      font-size: 2.5em !important;
     }
     .skills {
-      font-size: 1.1em;
+      font-size: 1.2em;
       font-weight: 300;
     }
   }
@@ -128,10 +128,10 @@ header {
     }
     .intro-text {
       .name {
-        font-size: 4.75em;
+        font-size: 2.2em;
       }
       .skills {
-        font-size: 1.75em;
+        font-size: 1.1em;
       }
     }
   }
@@ -197,7 +197,7 @@ section {
   padding: 100px 0;
   h2 {
     margin: 0;
-    font-size: 3em;
+    font-size: 2.5em;
   }
 }
 
@@ -361,66 +361,8 @@ footer {
   }
 }
 
-.portfolio-modal {
-  .modal-content {
-    border-radius: 0;
-    background-clip: border-box;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border: none;
-    min-height: 100%;
-    padding: 100px 0;
-    text-align: center;
-    h2 {
-      margin: 0;
-      font-size: 3em;
-    }
-    img {
-      margin-bottom: 30px;
-    }
-    .item-details {
-      margin: 30px 0;
-    }
-  }
-  .close-modal {
-    position: absolute;
-    width: 75px;
-    height: 75px;
-    background-color: transparent;
-    top: 25px;
-    right: 25px;
-    cursor: pointer;
-    &:hover {
-      opacity: 0.3;
-    }
-    .lr {
-      height: 75px;
-      width: 1px;
-      margin-left: 35px;
-      background-color: @brand-primary;
-      transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-      /* IE 9 */
-      -webkit-transform: rotate(45deg);
-      /* Safari and Chrome */
-      z-index: 1051;
-      .rl {
-        height: 75px;
-        width: 1px;
-        background-color: @brand-primary;
-        transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-        /* IE 9 */
-        -webkit-transform: rotate(90deg);
-        /* Safari and Chrome */
-        z-index: 1052;
-      }
-    }
-  }
-  .modal-backdrop {
-    opacity: 0;
-    display: none;
-  }
+.embed-pusher {
+  padding: 0 100px;
 }
 
 .embed-container {
