add screen shot carousel

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -387,3 +387,11 @@ footer {
   background-color: yellow;
   color: black;
 }
+.carousel-indicators {
+  li {
+    border-color: @brand-primary;
+  }
+  .active {
+    background-color: @brand-primary;
+  }
+}
