better link styling

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -210,7 +210,8 @@ section.success {
   a:focus,
   a:active,
   a.active {
-    color: @header-bg-color;
+    color: @brand-primary;
+    background-color: white;
     outline: none;
   }
 }
