--- a/public/less/main.less
+++ b/public/less/main.less
@@ -20,7 +20,7 @@ strong {
 }
 
 dd {
-  margin-bottom: 7px;
+  margin-bottom: 15px;
 }
 
 a,
@@ -111,7 +111,7 @@ header {
       font-family: @font;
       text-transform: uppercase;
       font-weight: 400;
-      font-size: 2.5em !important;
+      font-size: 2.7em !important;
     }
     .skills {
       font-size: 1.2em;
@@ -128,7 +128,7 @@ header {
     }
     .intro-text {
       .name {
-        font-size: 2.2em;
+        font-size: 2.3em;
       }
       .skills {
         font-size: 1.1em;
@@ -201,7 +201,7 @@ section {
   padding: 70px 0;
   h2 {
     margin: 0;
-    font-size: 2em;
+    font-size: 2.5em;
   }
 }
 
@@ -214,9 +214,13 @@ section.success {
   a:focus,
   a:active,
   a.active {
-    color: @brand-primary;
-    background-color: white;
+    color: white;
+    text-decoration: underline;
     outline: none;
+  }
+  a:hover {
+    background-color: white;
+    color: @brand-primary;
   }
 }
 
@@ -231,11 +235,6 @@ section.success {
 }
 
 @media (min-width: 767px) {
-  #portfolio {
-    .portfolio-item {
-      margin: 0 0 30px;
-    }
-  }
 }
 
 .btn-outline {
@@ -253,63 +252,6 @@ section.success {
     background: white;
     border: solid 2px white;
   }
-}
-
-.floating-label-form-group {
-  position: relative;
-  margin-bottom: 0;
-  padding-bottom: 0.5em;
-  border-bottom: 1px solid @gray-lighter;
-  input,
-  textarea {
-    z-index: 1;
-    position: relative;
-    padding-right: 0;
-    padding-left: 0;
-    border: none;
-    border-radius: 0;
-    font-size: 1.5em;
-    background: none;
-    box-shadow: none !important;
-    resize: none;
-  }
-  label {
-    display: block;
-    z-index: 0;
-    position: relative;
-    top: 2em;
-    margin: 0;
-    font-size: 0.85em;
-    line-height: 1.764705882em;
-    vertical-align: middle;
-    vertical-align: baseline;
-    opacity: 0;
-    -webkit-transition: top 0.3s ease, opacity 0.3s ease;
-    -moz-transition: top 0.3s ease, opacity 0.3s ease;
-    -ms-transition: top 0.3s ease, opacity 0.3s ease;
-    transition: top 0.3s ease, opacity 0.3s ease;
-  }
-  &::not(:first-child) {
-    padding-left: 14px;
-    border-left: 1px solid @gray-lighter;
-  }
-}
-
-.floating-label-form-group-with-value {
-  label {
-    top: 0;
-    opacity: 1;
-  }
-}
-
-.floating-label-form-group-with-focus {
-  label {
-    color: @brand-success;
-  }
-}
-
-form .row:first-child .floating-label-form-group {
-  border-top: 1px solid @gray-lighter;
 }
 
 footer {
@@ -399,4 +341,8 @@ footer {
 
 .carousel-control {
   background-color: transparent !important;
+}
+
+.padding-top {
+  padding-top: 40px;
 }
