make style adjustments only for second carousel

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -330,11 +330,11 @@ footer {
   color: black;
 }
 
-.carousel {
+#demo-carousel {
   min-height: 800px;
 }
 
-.pictures {
+.pictures-demo {
   width: auto;
   height: 800px;
   max-height: 800px;
